fix background image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	
 	<div class="qbootstrap-hero" data-section="home">
 		<div class="qbootstrap-overlay"></div>
-		<div class="qbootstrap-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/background1.jpg);">
+		<div class="qbootstrap-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/background1.jpg);background-size: 100% 100%;">
 			<div class="display-t">
 				<div class="display-tc">
 					<div class="container">
@@ -145,7 +145,7 @@
 		</div>
 	</div>
 	
-	<div id="qbootstrap-countdown" data-stellar-background-ratio="0.5" style="background-image: url(images/propose.jpg);" data-section="wedding-day">
+	<div id="qbootstrap-countdown" data-stellar-background-ratio="0.5" style="background-image: url(images/propose.jpg);background-size: 100% 100%;" data-section="wedding-day">
 		<div class="overlay"></div>
 		<div class="display-over">
 			<div class="container">
