update accomodation details,story

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>#KitNik 19-11-2018</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by QBOOTSTRAP.COM" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="QBOOTSTRAP.COM" />
+	<meta name="description" content="KitNik Ankit and Nikita Wedding" />
+	<meta name="keywords" content="KitNik #KitNik Ankit and Nikita Wedding , Ankit Tibrewal, Nikita Agrawal" />
+	<meta name="author" content="Ankit Tibrewal" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -85,7 +85,8 @@
 	            <!-- <li><a href="#" data-nav-section="people"><span>People</span></a></li> -->
 	            <li><a href="#" data-nav-section="when-where"><span>When &amp; Where</span></a></li>
 	            <li><a href="#" data-nav-section="rsvp"><span>RSVP</span></a></li>
-	             <li><a href="#" data-nav-section="reachkanpur"><span>Reach Kanpur</span></a></li>
+	            <li><a href="#" data-nav-section="reachkanpur"><span>Reach Kanpur</span></a></li>
+	            <li><a href="#" data-nav-section="accomodation"><span>Accomodation</span></a></li>
 	            <!-- <li><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li> -->
 	            <!-- <li><a href="#" data-nav-section="blog"><span>Blog</span></a></li> -->
 	          </ul>
@@ -189,9 +190,9 @@
 							<h2>Ankit Tibrewal</h2>
 							<p>Friend of Friends Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves Cricket,Football and travelling.A software engineer by trade,desigining and developing products now he got Nikki to make his life bugfree. </p>
 							<ul class="social social-circle">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
+								<li><a href="https://www.facebook.com/ankit.tibrewal.31"><i class="icon-facebook"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/ankittibrewal"><i class="icon-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -203,9 +204,9 @@
 							<h2>Nikita Agrawal</h2>
 							<p>Nikita aka Nikki is a smart and charming person. She loves reading novels,paints and loves watching movies and shows.One of the rarer breed who is cool and good with numbers,she is a Chartered Accountant and CFA.Now ready to transition from a Finance Advisor to a Life Advisor for Ankit.</p>
 							<ul class="social social-circle">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
+								<li><a href="https://www.facebook.com/nikita.agrawal.566790"><i class="icon-facebook"></i></a></li>
+								<li><a href="https://in.linkedin.com/in/nikita-agrawal-a2920515"><i class="icon-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -228,19 +229,20 @@
 				<div class="col-md-12">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/selfie-2.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
 									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">June 10, 2017</span>
+									<span class="date">May 11, 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
+									<p>They meet in Delhi for the first time and chat like long lost friends.Instantly developing a liking for each other.</p>
+									<p><strong>Love at first sight they say.</strong></p>
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+<!-- 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="overlay overlay-2"></div>
@@ -265,17 +267,17 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-4.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/knee.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="overlay overlay-2"></div>
 								<div class="timeline-heading">
 									<h3 class="timeline-title">We're Engaged</h3>
-									<span class="date">Sept. 01, 2017</span>
+									<span class="date">Sept. 17, 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
+									<p>He went down on one knee and ask her for her hand.She shied and then cried.Then they exchanged hearts and rings.</p>
 								</div>
 							</div>
 						</li>
@@ -507,8 +509,8 @@
 				</div>
 			</div>
 		</div>
-		</div>
-	</div>
+	 </div>
+	<!-- </div> -->
 
 	
 
@@ -528,7 +530,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row animate-box">
+
+			<!-- <div class="row animate-box">
 				<div class="col-md-10 col-md-offset-1">
 					<form class="form-inline">
 						<div class="col-md-4 col-sm-4">
@@ -548,9 +551,13 @@
 						</div>
 					</form>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
+	<div class="iframe-container">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1Z1UO2dpkNrFza8qm7YQA_TsEu7Mm0Q_9T9PwuCUTCZaPRQ/viewform?embedded=true" >Loading...</iframe>
+</div>
+				
 
 	<!-- <div id="qbootstrap-gallery" data-section="gallery">
 		<div class="container">
@@ -728,6 +735,69 @@
 		</div>
 	</div>
 
+		<div id="qbootstrap-started" class="qbootstrap-bg" data-section="accomodation" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="col-md-12 text-center section-heading svg-sm colored">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<h2>Accomodation Details</h2>
+						<div class="row">
+						<div class="col-md-10 col-md-offset-1 subtext">
+							<h3>Accomodation will be provided for 18-19 Nov</h3>
+						</div>
+					</div>
+			<div class="row row-bottom-padded-md">
+				<div class="col-md-6 text-center animate-box">
+					<div class="wedding-events">
+				<!-- 		<div class="ceremony-bg" style="background-image: url(images/sangeet.jpg);"></div> -->
+						<div class="desc">
+							<p><strong>Hotel Royal Cliff</strong> <br/>113/72, Swaroop Nagar. Opposite Motijheel Gate No. 1, Kanpur, Uttar Pradesh 208002, India</p>
+							<a href="https://goo.gl/maps/XYixKBSo8Nv"> Google Maps Link</a>
+							<!-- <p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p> -->
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 text-center animate-box">
+					<div class="wedding-events">
+					<!-- 	<div class="ceremony-bg" style="background-image: url(images/wedding.jpg);"></div> -->
+						<div class="desc">
+                            <p><strong>Regenta Central The Crystal</strong> <br/>111/7 A, Benajhawer Road, Harsh Nagar, Kanpur, Uttar Pradesh 208012, India</p>
+                            <a href="https://goo.gl/maps/jarhpeQdxa42"> Google Maps Link</a>
+							<!-- <p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p> -->
+						</div>
+					</div>
+				</div>
+			</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- <div class="row animate-box">
+				<div class="col-md-10 col-md-offset-1">
+					<form class="form-inline">
+						<div class="col-md-4 col-sm-4">
+							<div class="form-group">
+								<label for="name" class="sr-only">Name</label>
+								<input type="name" class="form-control" id="name" placeholder="Name">
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="form-group">
+								<label for="email" class="sr-only">Email</label>
+								<input type="email" class="form-control" id="email" placeholder="Email">
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
+						</div>
+					</form>
+				</div>
+			</div> -->
+		</div>
+	</div>
+
 
 	<footer id="footer" role="contentinfo">
 		<div class="container">
@@ -738,12 +808,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<ul class="social social-circle">
+					<!-- <ul class="social social-circle">
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-facebook"></i></a></li>
 						<li><a href="#"><i class="icon-youtube"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 		</div>
