--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="animate-box svg-sm colored">
-								<img src="images/flaticon/svg/004-nature.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+								<img src="images/flaticon/svg/004-nature.svg" class="svg" alt="#KitNik">
 								<h1 class="holder"><span>The Wedding of</span></h1>
 								<h2>Ankit &amp; Nikita</h2>
 								<p>19.11.2018</p>
@@ -121,7 +121,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 animate-box">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>We are Getting Married</h2>
 						<p><strong>Two Become One</strong></p>
 						<p><strong>on Nov 19, 2018 &mdash; Kanpur, India</strong></p>
@@ -135,9 +135,9 @@
 						<h3>Ankit Tibrewal</h3>
 						<span>Groom</span>
 					</div>
-					<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><img src="images/flaticon/svg/003-luxury.svg" class="svg img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></h2></div>
+					<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><img src="images/flaticon/svg/003-luxury.svg" class="svg img-responsive" alt="#KitNik"></h2></div>
 					<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
-						<img src="images/nikita.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/nikita.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Nikita Agrawal</h3>
 						<span>Bride</span>
 					</div>
@@ -152,7 +152,7 @@
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-12 section-heading text-center svg-sm colored">
-						<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="#KitNik">
 						<h2 class="">The Wedding Day</h2>
 						<span class="datewed">Monday, Nov. 19, 2018</span>
 					</div>
@@ -176,7 +176,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm-2 colored">
-						<img src="images/flaticon/svg/002-wedding-couple.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/002-wedding-couple.svg" class="svg" alt="#KitNik">
 						<h2>Groom &amp; Bride</h2>
 						<p>We may not have it all together, but together we have it all.</p>
 					</div>
@@ -185,7 +185,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="couple groom text-center animate-box">
-						<img src="images/ankit_1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/ankit_1.jpg" class="img-responsive" alt="#KitNik">
 						<div class="desc">
 							<h2>Ankit Tibrewal</h2>
 							<p>Friend of Friends Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves Cricket,Football and travelling.A software engineer by trade,desigining and developing products now he got Nikki to make his life bugfree. </p>
@@ -199,7 +199,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="couple bride text-center animate-box">
-						<img src="images/nikita_1.jpeg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/nikita_1.jpeg" class="img-responsive" alt="#KitNik">
 						<div class="desc">
 							<h2>Nikita Agrawal</h2>
 							<p>Nikita aka Nikki is a smart and charming person. She loves reading novels,paints and loves watching movies and shows.One of the rarer breed who is cool and good with numbers,she is a Chartered Accountant and CFA.Now ready to transition from a Finance Advisor to a Life Advisor for Ankit.</p>
@@ -220,7 +220,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm-2">
-						<img src="images/flaticon/svg/003-luxury.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/003-luxury.svg" class="svg" alt="#KitNik">
 						<h2>Our Love Story</h2>
 					</div>
 				</div>
@@ -293,7 +293,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-12 section-heading text-center svg-sm colored">
-					<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+					<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="#KitNik">
 					<h2 class="">Sweet Messages</h2>
 				</div>
 			</div>
@@ -338,7 +338,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>The Groomsmen</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext  ">
@@ -351,25 +351,25 @@
 			<div class="row row-bottom-padded-lg">
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/groom-men-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/groom-men-1.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Ian Bill</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/groom-men-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/groom-men-2.jpg" class="img-responsive" alt="#KitNik">
 						<h3>George Smith</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/groom-men-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/groom-men-3.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Brian Thompson</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/groom-men-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/groom-men-4.jpg" class="img-responsive" alt="#KitNik">
 						<h3>David Howard</h3>
 					</div>
 				</div>
@@ -377,7 +377,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>The Bridesmaid</h2>
 					</div>
 				</div>
@@ -385,25 +385,25 @@
 			<div class="row">
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/bridesmaid-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/bridesmaid-1.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Angel Thomas</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/bridesmaid-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/bridesmaid-2.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Kathy Shol</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/bridesmaid-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/bridesmaid-3.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Rose Mel</h3>
 					</div>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<div class="groom-men">
-						<img src="images/bridesmaid-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/bridesmaid-4.jpg" class="img-responsive" alt="#KitNik">
 						<h3>Ann Hathway</h3>
 					</div>
 				</div>
@@ -416,7 +416,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>Ceremony &amp; Party</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext">
@@ -520,7 +520,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>You Are Invited</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext">
@@ -564,7 +564,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>Our Selfie Photos</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext">
@@ -579,40 +579,40 @@
 			<div class="row">
 				<div class="col-md-3 col-sm-6">
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup image-popup" href="images/gallery-1.jpg"><img src="images/gallery-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup image-popup" href="images/gallery-1.jpg"><img src="images/gallery-1.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-10.jpg"><img src="images/gallery-10.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-6.jpg"><img src="images/gallery-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-2.jpg"><img src="images/gallery-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-5.jpg"><img src="images/gallery-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-10.jpg"><img src="images/gallery-10.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-7.jpg"><img src="images/gallery-7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-6.jpg"><img src="images/gallery-6.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-3.jpg"><img src="images/gallery-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-2.jpg"><img src="images/gallery-2.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-4.jpg"><img src="images/gallery-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-5.jpg"><img src="images/gallery-5.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-8.jpg"><img src="images/gallery-8.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-7.jpg"><img src="images/gallery-7.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-9.jpg"><img src="images/gallery-9.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
+						<a class="gallery-img image-popup" href="images/gallery-3.jpg"><img src="images/gallery-3.jpg" class="img-responsive" alt="#KitNik"></a>
+					</div>
+					<div class="gallery animate-box">
+						<a class="gallery-img image-popup" href="images/gallery-4.jpg"><img src="images/gallery-4.jpg" class="img-responsive" alt="#KitNik"></a>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="gallery animate-box">
+						<a class="gallery-img image-popup" href="images/gallery-8.jpg"><img src="images/gallery-8.jpg" class="img-responsive" alt="#KitNik"></a>
+					</div>
+					<div class="gallery animate-box">
+						<a class="gallery-img image-popup" href="images/gallery-9.jpg"><img src="images/gallery-9.jpg" class="img-responsive" alt="#KitNik"></a>
 					</div>
 				</div>
 			</div>
@@ -624,7 +624,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>Our Blog</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext">
@@ -693,7 +693,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-12 section-heading text-center svg-sm colored">
-					<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+					<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="#KitNik">
 					<h2 class="">How To Reach Kanpur</h2>
 				</div>
 			</div>
@@ -741,7 +741,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
+						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="#KitNik">
 						<h2>Accomodation Details</h2>
 						<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext">
