update love story

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
 								<div class="overlay"></div>
 								<div class="timeline-heading">
 									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">May 11, 2018</span>
+									<!-- <span class="date">May 11, 2018</span> -->
 								</div>
 								<div class="timeline-body">
-									<p>They meet in Delhi for the first time and chat like long lost friends.Instantly developing a liking for each other.</p>
-									<p><strong>Love at first sight they say.</strong></p>
+									<p>They first met in Delhi - The heart of the nation and now the city that lead to the making of <strong>KitNik</strong>.<br/> From messages and calls to their first meeting, they chatted like long lost friends,instanmtly developing a liking for each other.<br/><strong>Love at first sight they say.</strong><br/>They rightly say opposites attract  and this proved right in their case also.He loves sports,she loves movies, he loves gym,she loves reading, still they love each other's company.</p>
+									<!-- <p><strong>Love at first sight they say.</strong></p> -->
 								</div>
 							</div>
 						</li>
@@ -277,7 +277,7 @@
 									<span class="date">Sept. 17, 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>He went down on one knee and ask her for her hand.She shied and then cried.Then they exchanged hearts and rings.</p>
+									<p>The day when he went down on his knees with a ring in his hand and stole her heart forever,the day they shied,they smiled and exchanged rings.<br/> An evening of love,laughter,celebration and a new beginning.</p>
 								</div>
 							</div>
 						</li>
