--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<img src="images/ankit_1.jpg" class="img-responsive" alt="#KitNik">
 						<div class="desc">
 							<h2>Ankit Tibrewal</h2>
-							<p>Friend of Friends Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves Cricket,Football and travelling.A software engineer by trade,desigining and developing products now he got Nikki to make his life bugfree. </p>
+							<p>Friend of Friends Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves cricket,football and travelling.A software engineer by trade,desigining and developing products now he got <strong>Nikki</strong> to make his life bugfree. </p>
 							<ul class="social social-circle">
 								<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
 								<li><a href="https://www.facebook.com/ankit.tibrewal.31"><i class="icon-facebook"></i></a></li>
@@ -202,7 +202,7 @@
 						<img src="images/nikita_1.jpeg" class="img-responsive" alt="#KitNik">
 						<div class="desc">
 							<h2>Nikita Agrawal</h2>
-							<p>Nikita aka Nikki is a smart and charming person. She loves reading novels,paints and loves watching movies and shows.One of the rarer breed who is cool and good with numbers,she is a Chartered Accountant and CFA.Now ready to transition from a Finance Advisor to a Life Advisor for Ankit.</p>
+							<p>Nikita aka Nikki is a smart and charming person. She paints,loves reading novels and watching movies and shows.One of the rarer breed who is cool and good with numbers,she is a Chartered Accountant and CFA.Now ready to transition from a Financial Advisor to a Life Advisor for <strong>Ankit</strong>.</p>
 							<ul class="social social-circle">
 								<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
 								<li><a href="https://www.facebook.com/nikita.agrawal.566790"><i class="icon-facebook"></i></a></li>
@@ -237,7 +237,8 @@
 									<!-- <span class="date">May 11, 2018</span> -->
 								</div>
 								<div class="timeline-body">
-									<p>They first met in Delhi - The heart of the nation and now the city that lead to the making of <strong>KitNik</strong>.<br/> From messages and calls to their first meeting, they chatted like long lost friends,instanmtly developing a liking for each other.<br/><strong>Love at first sight they say.</strong><br/>They rightly say opposites attract  and this proved right in their case also.He loves sports,she loves movies, he loves gym,she loves reading, still they love each other's company.</p>
+									<p>They first met in Delhi - The heart of the nation and now the city that lead to the making of <strong>KitNik</
+									strong>.<br/> From messages and calls to their first meeting, they chatted like long lost friends,instantly developing a liking for each other.<br/><strong>Love at first sight they say.</strong><br/>They rightly say opposites attract  and this proved right in their case also.He loves sports,she loves movies, he loves gym,she loves reading, still they love each other's company.</p>
 									<!-- <p><strong>Love at first sight they say.</strong></p> -->
 								</div>
 							</div>
