--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 									<!-- <span class="date">May 11, 2018</span> -->
 								</div>
 								<div class="timeline-body">
-									<p>They first met in Delhi - The heart of the nation and now the city that lead to the making of <strong>KitNik</strong>
+									<p>They first met in Delhi - The heart of the nation and now the city that lead to the making of <strong>KitNik</strong>.
 					                <br/> From messages and calls to their first meeting, they chatted like long lost friends,instantly developing a liking for each other.<br/><strong>Love at first sight they say.</strong><br/>They rightly say opposites attract  and this proved right in their case also.He loves sports,she loves movies, he loves gym,she loves reading, still they love each other's company.</p>
 									<!-- <p><strong>Love at first sight they say.</strong></p> -->
 								</div>
