--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<header role="banner" id="qbootstrap-header">
 		<div class="container">
 			<!-- <div class="row"> -->
-		    <nav class="navbar navbar-default navbar-fixed-top">
+		    <nav class="navbar navbar-default">
 	        <div class="navbar-header">
 	        	<!-- Mobile Toggle Menu Button -->
 				<a href="#" class="js-qbootstrap-nav-toggle qbootstrap-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
