--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<img src="images/ankit_1.jpg" class="img-responsive" alt="#KitNik">
 						<div class="desc">
 							<h2>Ankit Tibrewal</h2>
-							<p>Friend of Friends Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves cricket,football and travelling.A software engineer by trade,desigining and developing products now he got <strong>Nikki</strong> to make his life bugfree. </p>
+							<p>Friend of Friends. Ankit is a fun loving,caring, witty,energetic and responsible catch.He loves cricket,football and travelling.A software engineer by trade,desigining and developing products, now he got <strong>Nikki</strong> to make his life bugfree. </p>
 							<ul class="social social-circle">
 								<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
 								<li><a href="https://www.facebook.com/ankit.tibrewal.31"><i class="icon-facebook"></i></a></li>
